Small layout changes

--- a/index.html
+++ b/index.html
@@ -108,17 +108,17 @@
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Ativos</span>
+        <span class="card-body__name">Cli. Ativos</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Vinculados</span>
+        <span class="card-body__name">Cli. Vinculados</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Emprestimos</span>
+        <span class="card-body__name">Emprestimos</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
@@ -149,17 +149,17 @@
         <input class="card-body__done" type="number"">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Ativos</span>
+        <span class="card-body__name">Cli. Ativos</span>
         <input class="card-body__goal" type="number"">
         <input class="card-body__done" type="number"">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Vinculados</span>
+        <span class="card-body__name">Cli. Vinculados</span>
         <input class="card-body__goal" type="number"">
         <input class="card-body__done" type="number"">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Emprestimos</span>
+        <span class="card-body__name">Emprestimos</span>
         <input class="card-body__goal" type="number"">
         <input class="card-body__done" type="number"">
         <span class="card-body__done-percentage"></span>
@@ -190,17 +190,17 @@
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Ativos</span>
+        <span class="card-body__name">Cli. Ativos</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Vinculados</span>
+        <span class="card-body__name">Cli. Vinculados</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Emprestimos</span>
+        <span class="card-body__name">Emprestimos</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
@@ -231,17 +231,17 @@
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Ativos</span>
+        <span class="card-body__name">Cli. Ativos</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Vinculados</span>
+        <span class="card-body__name">Cli. Vinculados</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Emprestimos</span>
+        <span class="card-body__name">Emprestimos</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
@@ -272,17 +272,17 @@
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Ativos</span>
+        <span class="card-body__name">Cli. Ativos</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Vinculados</span>
+        <span class="card-body__name">Cli. Vinculados</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Emprestimos</span>
+        <span class="card-body__name">Emprestimos</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
@@ -313,17 +313,17 @@
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Ativos</span>
+        <span class="card-body__name">Cli. Ativos</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Vinculados</span>
+        <span class="card-body__name">Cli. Vinculados</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Emprestimos</span>
+        <span class="card-body__name">Emprestimos</span>
         <input class="card-body__goal" type="number">
         <input class="card-body__done" type="number">
         <span class="card-body__done-percentage"></span>
@@ -354,17 +354,17 @@
         <input class="card-body__done" type="number" readonly>
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Ativos</span>
+        <span class="card-body__name">Cli. Ativos</span>
         <input class="card-body__goal" type="number" readonly>
         <input class="card-body__done" type="number" readonly>
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Cli. Vinculados</span>
+        <span class="card-body__name">Cli. Vinculados</span>
         <input class="card-body__goal" type="number"readonly>
         <input class="card-body__done" type="number" readonly>
         <span class="card-body__done-percentage"></span>
 
-        <span class="card-body__name">Inc. Emprestimos</span>
+        <span class="card-body__name">Emprestimos</span>
         <input class="card-body__goal" type="number" readonly>
         <input class="card-body__done" type="number" readonly>
         <span class="card-body__done-percentage"></span>
